--- a/ExpertAdministration.Server/ExpertAdministration.Server.csproj
+++ b/ExpertAdministration.Server/ExpertAdministration.Server.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\ExpertAdministration.Core\ExpertAdministration.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Shared\" />
+  </ItemGroup>
+
 </Project>
