--- a/ExpertAdministration.Web/ExpertAdministration.Web.csproj
+++ b/ExpertAdministration.Web/ExpertAdministration.Web.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.1" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0-preview.3.23174.8"/>
     <PackageReference Include="Radzen.Blazor" Version="4.10.3" />
     <PackageReference Include="System.Net.Http.Json" Version="7.0.1" />
   </ItemGroup>
